update packages to fix npm audit vulnerabilities.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "homepage": "https://github.com/ironflytech/nuts",
   "license": "Apache-2.0",
   "dependencies": {
+    "@ironfly/lru-diskcache": "git://github.com/ironflytech/lru-diskcache.git#master",
+    "@ironfly/octocat": "git://github.com/ironflytech/octocat.js.git#master",
     "analytics-node": "2.1.1",
     "aws-sdk": "^2.6.6",
     "basic-auth": "1.0.3",
@@ -15,11 +17,9 @@
     "express-useragent": "0.1.9",
     "feed": "^0.3.0",
     "github-webhook-handler": "0.5.0",
-    "lodash": "^4.15.0",
-    "lru-diskcache": "1.1.1",
-    "octocat": "1.1.0",
+    "lodash": "^4.17.10",
     "q": "1.2.0",
-    "request": "2.83.0",
+    "request": "2.87.0",
     "semver": "5.0.1",
     "stream-res": "1.0.1",
     "strip-bom": "2.0.0",
@@ -32,7 +32,7 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
-    "mocha": "1.18.2",
+    "mocha": "5.2.0",
     "should": "7.0.4"
   },
   "bugs": {
